[project]
name = "buche-py"
version = "0.1.0"
description = "pretty print of open telemetry json"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.8.1", "colorama>=0.4.6"]

[project.scripts]
buche = "buche_py.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
